syntax = "proto3";

package auth;

option go_package = "internal/proto/auth";

message LoginRequest {
	string email = 1;
	string password = 2;
}

message RegisterRequest {
	string email = 1;
	string first_name = 2;
	string last_name = 3;
	string password = 4;
}

message AuthResponse {
	string message = 1;
}

service Auth {
	rpc Login(LoginRequest) returns (AuthResponse);
	rpc Register(RegisterRequest) returns (AuthResponse);
}

